--- a/style.css
+++ b/style.css
@@ -102,11 +102,11 @@ body{
 }
 
 /* スライド個別設定 */
-.slideimg:nth-of-type(1) { background-image: url('../images/front2.JPG'); animation-delay: 0s; }
-.slideimg:nth-of-type(2) { background-image: url('../images/award3.JPG'); animation-delay: 3s; }
-.slideimg:nth-of-type(3) { background-image: url('../images/book4.JPG'); animation-delay: 6s; }
-.slideimg:nth-of-type(4) { background-image: url('../images/Hashimura11.JPG'); animation-delay: 9s; }
-.slideimg:nth-of-type(5) { background-image: url('../images/front7.JPG'); animation-delay: 12s; }
+.slideimg:nth-of-type(1) { background-image: url('images/front2.JPG'); animation-delay: 0s; }
+.slideimg:nth-of-type(2) { background-image: url('images/award3.JPG'); animation-delay: 3s; }
+.slideimg:nth-of-type(3) { background-image: url('images/book4.JPG'); animation-delay: 6s; }
+.slideimg:nth-of-type(4) { background-image: url('images/Hashimura11.JPG'); animation-delay: 9s; }
+.slideimg:nth-of-type(5) { background-image: url('images/front7.JPG'); animation-delay: 12s; }
 
 /*タイミング設定*/
 @keyframes slideAnime {
